--- a/package.json
+++ b/package.json
@@ -6,10 +6,31 @@
   "scripts": {
     "start": "vite",
     "build": "tsc && vite build",
+    "test": "jest",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "tunnel": "vk-tunnel",
     "deploy": "vk-miniapps-deploy"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(css)$": "jest-css-modules"
+    },
+    "transform": {
+      "\\.(ts|tsx)$": "ts-jest"
+    },
+    "testRegex": ".test.(ts|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTests.js"
+    ]
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
@@ -19,6 +40,7 @@
     "@vkontakte/vk-tunnel": "^0.2.0",
     "@vkontakte/vkui": "^6.0.2",
     "axios": "^1.6.8",
+    "jest": "^29.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.1",
@@ -26,15 +48,19 @@
     "sass": "^1.75.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.5",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
