--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "jest": {
     "moduleNameMapper": {
-      "\\.(css)$": "jest-css-modules"
+      "\\.module.(css|scss)$": "<rootDir>/node_modules/jest-css-modules"
     },
     "transform": {
       "\\.(ts|tsx)$": "ts-jest"
@@ -49,9 +49,12 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.5",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.6",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/react-test-renderer": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
@@ -60,6 +63,8 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "jest-css-modules": "^2.1.0",
+    "react-test-renderer": "^18.3.1",
     "ts-jest": "^29.1.2",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
